--- a/src/styles/themes/awesome.css
+++ b/src/styles/themes/awesome.css
@@ -10,7 +10,10 @@
 
 :where(:root),
 :host,
-.wa-theme-awesome {
+.wa-theme-awesome,
+.wa-dark,
+.wa-light,
+.wa-invert {
   /**
    * Spacing
    */
