--- a/src/styles/themes/mellow.css
+++ b/src/styles/themes/mellow.css
@@ -10,7 +10,10 @@
 
 :where(:root),
 :host,
-.wa-theme-mellow {
+.wa-theme-mellow,
+.wa-dark,
+.wa-light,
+.wa-invert {
   /**
    * Spacing
    */
