--- a/src/styles/themes/premium.css
+++ b/src/styles/themes/premium.css
@@ -10,7 +10,10 @@
 
 :where(:root),
 :host,
-.wa-theme-premium {
+.wa-theme-premium,
+.wa-dark,
+.wa-light,
+.wa-invert {
   /**
    * Borders
    */
