--- a/src/styles/themes/tailspin.css
+++ b/src/styles/themes/tailspin.css
@@ -10,7 +10,10 @@
 
 :where(:root),
 :host,
-.wa-theme-tailspin {
+.wa-theme-tailspin,
+.wa-dark,
+.wa-light,
+.wa-invert {
   /**
    * Spacing
    */
